# self_investment

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml  requirements.txt  search.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  run-pytest.yml
reports/: Análise.py
self_investment/: __init__.py  mkdocs.yml  setup.py
self_investment/docs/tests/: report.html
tests/: coverage.xml  junit.xml  report.html
tests/assets/: style.css
tests/coverage.html/: d_0cf248cd80a23c58___init___py.html  d_0cf248cd80a23c58_structure_py.html  d_978ee1582c7bd342_Delta_py.html  d_978ee1582c7bd342___init___py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_data_mock_py.html  d_a44f0ac069e85531_test_structure_py.html  d_d23a119148fe4c43_test_Delta_py.html  d_eacbc5b8b44bb3b2_storage_py.html  index.html  status.json
